--- a/assigments/CSS/Frameworks/pos/pages/ItemForm.html
+++ b/assigments/CSS/Frameworks/pos/pages/ItemForm.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
 </header>
-<section id="CustomerForm" style="height: 98vh">
+<section  style="height: 98vh">
     <header style="background: pink">
         <div style="height: 60px;width: 100vw;">
 
