--- a/assigments/JS/Calculator/index.html
+++ b/assigments/JS/Calculator/index.html
@@ -58,72 +58,72 @@
             <div>
                 <div class="row" style="margin-bottom: 1vh; height: 20%;">
                     <div class="col">
-                        <button type="button" class="btn btn-danger" style="width: 100%; height: 100%; margin-left: 0.7vw;">C</button>
+                        <button type="button" class="btn btn-danger" id="btn1" style="width: 100%; height: 100%; margin-left: 0.7vw;">C</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.4vw;">()</button>
+                        <button type="button" class="btn btn-success"id="btn2" style="width: 100%; height: 100%; margin-left: 0.4vw;">( )</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%;">%</button>
+                        <button type="button" class="btn btn-success" id="btn3" style="width: 100%; height: 100%;">%</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: -0.5vw">/</button>
-                    </div>
-                </div>
-                <div class="row" style="margin-bottom: 1vh; height: 20%;">
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.7vw;">7</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.4vw;">8</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%;">9</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: -0.5vw">*</button>
+                        <button type="button" class="btn btn-success"id="btn4" style="width: 100%; height: 100%; margin-left: -0.5vw">/</button>
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 1vh; height: 20%;">
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.7vw;">4</button>
+                        <button type="button" class="btn btn-success"id="btn5" style="width: 100%; height: 100%; margin-left: 0.7vw;">7</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.4vw;">5</button>
+                        <button type="button" class="btn btn-success"id="btn6" style="width: 100%; height: 100%; margin-left: 0.4vw;">8</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; ">6</button>
+                        <button type="button" class="btn btn-success"id="btn7" style="width: 100%; height: 100%;">9</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: -0.5vw">-</button>
-                    </div>
-                </div>
-                <div class="row" style="margin-bottom: 1vh; height: 20%;">
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.7vw;">1</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.4vw;">2</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; ">3</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: -0.5vw">+</button>
+                        <button type="button" class="btn btn-success"id="btn8" style="width: 100%; height: 100%; margin-left: -0.5vw">*</button>
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 1vh; height: 20%;">
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.7vw;">+/-</button>
+                        <button type="button" class="btn btn-success" id="btn9" style="width: 100%; height: 100%; margin-left: 0.7vw;">4</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%; margin-left: 0.4vw;">0</button>
+                        <button type="button" class="btn btn-success" id="btn10" style="width: 100%; height: 100%; margin-left: 0.4vw;">5</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-success" style="width: 100%; height: 100%;">.</button>
+                        <button type="button" class="btn btn-success" id="btn11" style="width: 100%; height: 100%; ">6</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-warning" style="width: 100%; height: 100%; margin-left: -0.5vw">=</button>
+                        <button type="button" class="btn btn-success" id="btn12" style="width: 100%; height: 100%; margin-left: -0.5vw">-</button>
+                    </div>
+                </div>
+                <div class="row" style="margin-bottom: 1vh; height: 20%;">
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn13" style="width: 100%; height: 100%; margin-left: 0.7vw;">1</button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn14"  style="width: 100%; height: 100%; margin-left: 0.4vw;">2</button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn15"  style="width: 100%; height: 100%; ">3</button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn16"  style="width: 100%; height: 100%; margin-left: -0.5vw">+</button>
+                    </div>
+                </div>
+                <div class="row" style="margin-bottom: 1vh; height: 20%;">
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn17"  style="width: 100%; height: 100%; margin-left: 0.7vw;">+/-</button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn18"  style="width: 100%; height: 100%; margin-left: 0.4vw;">0</button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-success" id="btn19"  style="width: 100%; height: 100%;">.</button>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-warning" id="btn20"  style="width: 100%; height: 100%; margin-left: -0.5vw">=</button>
                     </div>
                 </div>
             </div>
@@ -132,5 +132,82 @@
 </main>
 <script rel="script" src="asserts/bootstrap/js/bootstrap.min.js"></script>
 <script src="asserts/js/jquery-3.6.1.min.js"></script>
+<script>
+
+    $('#btn1').click(function () {
+        $('#display_output').val("");
+    });
+
+    $('#btn5').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn5').text())
+    });
+    $('#btn6').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn6').text())
+    });
+    $('#btn7').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn7').text())
+    });
+    $('#btn9').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn9').text())
+    });
+    $('#btn10').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn10').text())
+    });
+    $('#btn11').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn11').text())
+    });
+    $('#btn13').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn13').text())
+    });
+    $('#btn14').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn14').text())
+    });
+    $('#btn15').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn15').text())
+    });
+    $('#btn18').click(function () {
+        $('#display_output').val($('#display_output').val() + $('#btn18').text())
+    });
+    var fristNumber;
+    var mark;
+
+    $('#btn16').click(function () {
+        fristNumber = $('#display_output').val();
+        mark = $('#btn16').text();
+        $('#display_output').val("");
+    });
+
+    $('#btn4').click(function () {
+        fristNumber = $('#display_output').val();
+        mark = $('#btn4').text();
+        $('#display_output').val("");
+    });
+
+    $('#btn12').click(function () {
+        fristNumber = $('#display_output').val();
+        mark = $('#btn12').text();
+        $('#display_output').val("");
+    });
+
+    $('#btn8').click(function () {
+        fristNumber = $('#display_output').val();
+        mark = $('#btn8').text();
+        $('#display_output').val("");
+    });
+    function takeAnswer(){
+        if (mark == "+"){
+            $('#display_output').val((+fristNumber) + (+$('#display_output').val()));
+        }else if(mark == "-"){
+            $('#display_output').val((+fristNumber) - (+$('#display_output').val()));
+        }else if(mark == "/"){
+            $('#display_output').val((+fristNumber) / (+$('#display_output').val()));
+        }else{
+            $('#display_output').val((+fristNumber) * (+$('#display_output').val()));
+        }
+    }
+    $('#btn20').click(function () {
+        takeAnswer();
+    })
+</script>
 </body>
 </html>
