--- a/index.html
+++ b/index.html
@@ -31,22 +31,31 @@
     <main>
         <section>
             <img src="asserts/images/Full%20_Cover.png">
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
         <section>
             <header>
                 <h1 id="aboutme">About Me <i class="fa-solid fa-address-card"></i></h1>
             </header>
-            <p><b><i>Hey There..</i></b></p>
-            <article>
-                <p>
-                    I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank">IJSE</a>.
-                    I look forward to becoming a full stack softwere developer in a few more years.<br>
-                    Now I started my journey for it.
-                    I have some knowledge about <b>java,mySQL,<abbr title="Object-oriented programming">OOP</abbr></b> Concepts.
-                    I can also use new technologies like <b>Hibernate</b>.<br>
-                    I can create websites and webpages using <b><abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript</b>.
+            <section>
+                <p><b><i>Hey There..</i></b></p>
+                <article>
+                    <p>
+                        I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank">IJSE</a>.
+                        I look forward to becoming a full stack softwere developer in a few more years.<br>
+                        Now I started my journey for it.
+                        I have some knowledge about <b>java,mySQL,<abbr title="Object-oriented programming">OOP</abbr></b> Concepts.
+                        I can also use new technologies like <b>Hibernate</b>.<br>
+                        I can create websites and webpages using <b><abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript</b>.
                     </p>
                 </article>
+            </section>
+            <section>
+                <div><div></div></div>
+                <div><div></div></div>
+            </section>
         </section>
         <section>
             <header>
@@ -82,9 +91,9 @@
                     <h1 id="activities">Activities <i class="fas fa-chart-line"></i></h1>
                 </header>
                 <section>
+                    <a target="_blank"><div></div></a>
                     <a href="assi.html" target="_blank"><div></div></a>
-                    <a href="projects.html" target="_blank"><div></div></a>
-                    <a href="#" target="_blank"><div></div></a>
+                    <a target="_blank"><div></div></a>
                 </section>
         </section>
         <section>
@@ -144,6 +153,7 @@
         </section>
         <a href="#heder"><div></div></a>
         <a href="tel:+94754313114"><div><i class="fa-solid fa-phone"></i></div></a>
+        <a href="mail:superdilshan999@gmail.com"><div><i class="fa-solid fa-message"></i></div></a>
     </main>
     <footer>
         <div></div>
