--- a/assi.html
+++ b/assi.html
@@ -10,58 +10,163 @@
             width: 98vw;
         }
         main {
-            height: 87vh;
+            height: 100%;
             width: 98vw;
         }
         main>section:nth-child(1)>header{
             height: 5vh;
         }
-        main>section:nth-child(1)>section>header:nth-child(1) {
-            height: 3vh;
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a>div:nth-child(1){
+            border: 2px solid black;
+            height: 200px;
+            width: 350px;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a>div:nth-child(1):hover{
+            border: 2px solid black;
+            height: 250px;
+            width: 400px;
         }
         main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2){
-            display: flex;
-            justify-content: space-around;
+            margin-top: 18px;
         }
-        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a>div{
-            height: 50px;
-            width: 100px;
-            border: #0325ff solid 2px;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            margin-top: 4vh;
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (1).png");
+            background-size: cover;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (2).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (6).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(4)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (3).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(5)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (4).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(6)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (5).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a>div:nth-child(1){
+            border: 2px solid black;
+            height: 200px;
+            width: 350px;
+        }
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a>div:nth-child(1):hover{
+            border: 2px solid black;
+            height: 250px;
+            width: 400px;
         }
         main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2){
-            display: flex;
-            justify-content: space-around;
+            margin-top: 18px;
         }
-        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a>div{
-            height: 50px;
-            width: 100px;
-            border: #0325ff solid 2px;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            margin-top: 4vh;
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (7).png");
+            background-size: cover;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (8).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a>div:nth-child(1){
+            border: 2px solid black;
+            height: 200px;
+            width: 350px;
+        }
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a>div:nth-child(1):hover{
+            border: 2px solid black;
+            height: 250px;
+            width: 400px;
         }
         main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2){
-            display: flex;
-            justify-content: space-around;
+            margin-top: 18px;
         }
-        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a>div{
-            height: 50px;
-            width: 100px;
-            border: #0325ff solid 2px;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            margin-top: 4vh;
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (9).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
         }
-        footer{
-            background: #73A24E;
-            height: 5vh;
-            width: 98vw;
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (10).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (11).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(4)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (12).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(5)>section:nth-child(2){
+            margin-top: 18px;
+        }
+        main>section:nth-child(1)>section:nth-child(5)>section:nth-child(2)>a>div:nth-child(1){
+            border: 2px solid black;
+            height: 200px;
+            width: 350px;
+        }
+        main>section:nth-child(1)>section:nth-child(5)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (13).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        main>section:nth-child(1)>section:nth-child(5)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1):hover{
+            border: 2px solid black;
+            height: 250px;
+            width: 400px;
+        }
+        main>section:nth-child(2)>section:nth-child(2){
+            margin-top: 18px;
+        }
+        main>section:nth-child(2)>section:nth-child(2)>a>div:nth-child(1){
+            border: 2px solid black;
+            height: 200px;
+            width: 350px;
+        }
+        main>section:nth-child(2)>section:nth-child(2)>a>div:nth-child(1):hover{
+            border: 2px solid black;
+            height: 250px;
+            width: 400px;
+        }
+        main>section:nth-child(2)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (14).png");
+            background-size: cover;
+            margin-left: 10px;
+        }
+        main>section:nth-child(2)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+            background: url("asserts/images/Screenshot (15).png");
+            background-size: cover;
+            margin-top: 10px;
+            margin-left: 10px;
         }
     </style>
 </head>
@@ -82,12 +187,12 @@
                     <h4>CSS-Basics</h4>
                 </header>
                 <section>
-                    <a href="assigments/CSS/Basics/case_1/case_1.html" target="_parent"><div>Case 01</div></a>
-                    <a href="assigments/CSS/Basics/case_2/case_2.html" target="_parent"><div>Case 02</div></a>
-                    <a href="assigments/CSS/Basics/case_3/case_3.html" target="_parent"><div>Case 03</div></a>
-                    <a href="assigments/CSS/Basics/case_4/case_4.html" target="_parent"><div>Case 04</div></a>
-                    <a href="assigments/CSS/Basics/case_5/case_5.html" target="_parent"><div>Case 05</div></a>
-                    <a href="assigments/CSS/Basics/case_6/case_6.html" target="_parent"><div>Case 06</div></a>
+                    <a href="assigments/CSS/Basics/case_1/case_1.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Basics/case_2/case_2.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Basics/case_3/case_3.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Basics/case_4/case_4.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Basics/case_5/case_5.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Basics/case_6/case_6.html" target="_parent"><div></div></a>
                 </section>
             </section>
             <section>
@@ -95,8 +200,8 @@
                     <h4>CSS-Transitions</h4>
                 </header>
                 <section>
-                    <a href="assigments/CSS/Transitions/case_1/case_1.html" target="_parent"><div>Case 01</div></a>
-                    <a href="assigments/CSS/Transitions/case_2/case_2.html" target="_parent"><div>Case 02</div></a>
+                    <a href="assigments/CSS/Transitions/case_1/case_1.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Transitions/case_2/case_2.html" target="_parent"><div></div></a>
                 </section>
             </section>
             <section>
@@ -104,17 +209,32 @@
                     <h4>CSS-Animations</h4>
                 </header>
                 <section>
-                    <a href="assigments/CSS/Animations/case_1/case_1.html" target="_parent"><div>Case 01</div></a>
-                    <a href="assigments/CSS/Animations/case_2/case_2.html" target="_parent"><div>Case 02</div></a>
-                    <a href="assigments/CSS/Animations/case_3/case_3.html" target="_parent"><div>Case 03</div></a>
-                    <a href="assigments/CSS/Animations/case_4/case_4.html" target="_parent"><div>Case 04</div></a>
+                    <a href="assigments/CSS/Animations/case_1/case_1.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Animations/case_2/case_2.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Animations/case_3/case_3.html" target="_parent"><div></div></a>
+                    <a href="assigments/CSS/Animations/case_4/case_4.html" target="_parent"><div></div></a>
                 </section>
+            </section>
+            <section>
+                <header>
+                    <h4>CSS-Frameworks</h4>
+                </header>
+                <section>
+                    <a href="assigments/CSS/Frameworks/pos/index.html"><div></div></a>
+                </section>
+            </section>
+
+        </section>
+        <section>
+            <header>
+                <h2>JS-JavaScript</h2>
+            </header>
+            <section>
+                <a href="assigments/JS/SPA/index.html"><div></div></a>
+                <a href="assigments/JS/Calculator/index.html"><div></div></a>
             </section>
         </section>
     </main>
 </body>
-<footer>
-
-</footer>
 </body>
 </html>
