--- a/assigments/JS/SPA/index.html
+++ b/assigments/JS/SPA/index.html
@@ -18,7 +18,7 @@
                     <button class="nav-link active" id="HomeBtn" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="false" >Home</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="CustomerBtn" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+                    <button class="nav-link" id="CustomerBtn" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Customer</button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="ItemBtn" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Items</button>
