add new cover image

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
     </header>
     <main>
         <section>
-            <img src="asserts/images/Full%20_Cover.png">
             <div></div>
             <div></div>
-            <div></div>
+            <div>
+                <div><p>Hi</p></div>
+                <div><p>I'm Chathuranga Dilshan</p></div>
+                <div><p>A Full Stack Software Developer</p></div>
+                <div></div>
+            </div>
         </section>
         <section>
             <header>
