add new Gallery images

--- a/assi.html
+++ b/assi.html
@@ -34,31 +34,31 @@
             background-size: cover;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
             background: url("asserts/images/Screenshot (2).png");
             background-size: cover;
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(5)>div:nth-child(1){
             background: url("asserts/images/Screenshot (6).png");
             background-size: cover;
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(4)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(7)>div:nth-child(1){
             background: url("asserts/images/Screenshot (3).png");
             background-size: cover;
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(5)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(9)>div:nth-child(1){
             background: url("asserts/images/Screenshot (4).png");
             background-size: cover;
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(6)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a:nth-child(11)>div:nth-child(1){
             background: url("asserts/images/Screenshot (5).png");
             background-size: cover;
             margin-top: 10px;
@@ -82,7 +82,7 @@
             background-size: cover;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
             background: url("asserts/images/Screenshot (8).png");
             background-size: cover;
             margin-top: 10px;
@@ -107,19 +107,19 @@
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
             background: url("asserts/images/Screenshot (10).png");
             background-size: cover;
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(5)>div:nth-child(1){
             background: url("asserts/images/Screenshot (11).png");
             background-size: cover;
             margin-top: 10px;
             margin-left: 10px;
         }
-        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(4)>div:nth-child(1){
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a:nth-child(7)>div:nth-child(1){
             background: url("asserts/images/Screenshot (12).png");
             background-size: cover;
             margin-top: 10px;
@@ -162,7 +162,7 @@
             background-size: cover;
             margin-left: 10px;
         }
-        main>section:nth-child(2)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
+        main>section:nth-child(2)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
             background: url("asserts/images/Screenshot (15).png");
             background-size: cover;
             margin-top: 10px;
@@ -188,11 +188,17 @@
                 </header>
                 <section>
                     <a href="assigments/CSS/Basics/case_1/case_1.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Basics/case_2/case_2.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Basics/case_3/case_3.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Basics/case_4/case_4.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Basics/case_5/case_5.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Basics/case_6/case_6.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                 </section>
             </section>
             <section>
@@ -201,7 +207,9 @@
                 </header>
                 <section>
                     <a href="assigments/CSS/Transitions/case_1/case_1.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Transitions/case_2/case_2.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                 </section>
             </section>
             <section>
@@ -210,9 +218,13 @@
                 </header>
                 <section>
                     <a href="assigments/CSS/Animations/case_1/case_1.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Animations/case_2/case_2.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Animations/case_3/case_3.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                     <a href="assigments/CSS/Animations/case_4/case_4.html" target="_parent"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                 </section>
             </section>
             <section>
@@ -221,6 +233,7 @@
                 </header>
                 <section>
                     <a href="assigments/CSS/Frameworks/pos/index.html"><div></div></a>
+                    <div><p>fdgbfdgdfgfdgf</p></div>
                 </section>
             </section>
 
@@ -231,7 +244,9 @@
             </header>
             <section>
                 <a href="assigments/JS/SPA/index.html"><div></div></a>
+                <div><p>fdgbfdgdfgfdgf</p></div>
                 <a href="assigments/JS/Calculator/index.html"><div></div></a>
+                <div><p>fdgbfdgdfgfdgf</p></div>
             </section>
         </section>
     </main>
