--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
                     <div></div>
                     <div></div>
                     <div></div>
+                    <div></div>
+                    <div></div>
+                    <div>
+                        <div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div></div>
                 </section>
         </section>
         <section id="contactMe">
